# rigel-targetcode

./: README.md  build.sh
include/: Makefile  incoherent_malloc.h  pthread.h  rigel-sim.h  rigel-tasks.h  rigel.h  rtm-sw.h  sched.h  spinlock.h  stddef.h
include/machine/: suds_primops.h
include/sys/: signal.h
lib/: .gitignore  Makefile  build.sh  rigel-crt0-mp.S
lib/compiler-rt/BlocksRuntime/: Makefile  config.h  runtime.c
lib/compiler-rt/lib/: .gitignore  Makefile  absvti2.c  clear_cache.c  endianness.h  endianness.h.gch  int_lib.h  modsi3.c  sti8.c  unalignedldi16.c  unalignedldi32.c  unalignedsti16.c  unalignedsti32.c
lib/libpar/: Makefile  barrier-mt.c  barrier.c  hack.sed  hw-tasks.c  rtm-sw-common.c  rtm-sw-dequeue.c  rtm-sw-enqueue.c  rtm-sw-init.c
lib/libpar/graveyard/: sw-tasks-fixed.c  sw-tasks-lockfree.c  sw-tasks-spinlocks.c
lib/libpthread/: Makefile  pthread_cond.c  pthread_management.c  pthread_mutex.c  pthread_once.c  pthread_tls.c
lib/linker/: Makefile  rigel.ld
lib/newlib/: .gitignore  build.sh  config.sub  rebuild.sh
lib/newlib/CVS/: Entries
lib/newlib/libgloss/: configure  configure.in
lib/newlib/newlib/: ChangeLog  configure  configure.host
lib/newlib/newlib/libc/sys/rigel/: Makefile.am  Makefile.in  configure  configure.in  crt0.c  getreent.c  incoherent_malloc.c  incoherent_malloc.h  malloc.c.h  mallocr.c  mman.c  nedmalloc.c  sched.c  sig.c  stdio_wrappers.c  unistd_misc.c
lib/newlib/newlib/libc/sys/rigel/dl/: Makefile.am  Makefile.in
lib/newlib/newlib/libc/sys/rigel/include/: pthread.h  sched.h  ucontext.h
lib/newlib/newlib/libc/sys/rigel/include/bits/: sigstack.h
lib/newlib/newlib/libc/sys/rigel/sys/: fcntl.h  lock.h  mman.h  stat.h
lib/taskmodel-x86/: Makefile
lib/taskmodel-x86/include/: rigel-memops.h  rigel-tasks.h  rigel.h  rtm-x86.h
lib/taskmodel-x86/lib/: Makefile  librtm-x86.c
lib/taskmodel-x86/tests/: Makefile  cg-util.c  cg.c  cg.h  dmm.c  heat.c  mri.c  mri.h  rtm-test.c  smatrix.h  sobel.c
src/: .gitignore  Makefile.common
src/benchmarks/: Makefile  Makefile.common
src/testing/: Makefile  Makefile.common  common.h
(+234 files in other folders)
