dnl This is the newlib/libc/sys/linux configure.in file.
dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([newlib],[NEWLIB_VERSION])
AC_CONFIG_SRCDIR([getreent.c])

dnl Can't be done in NEWLIB_CONFIGURE because that confuses automake. 
AC_CONFIG_AUX_DIR(../../../..)

NEWLIB_CONFIGURE(../../..)

#EXTRA_SUBDIRS="dl"
#EXTRA_SUBLIBS="dl/libdl.a"

#AC_SUBST(EXTRA_SUBDIRS)
#AC_SUBST(EXTRA_SUBLIBS)

#AC_CONFIG_FILES([Makefile dl/Makefile])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
